Converted app to use expo-router

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "pantry-partner",
+    "scheme": "pantry-partner",
     "slug": "pantry-partner",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -21,10 +22,9 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     },
-    "plugins": [
-      "expo-font"
-    ]
+    "plugins": ["expo-font", "expo-router"]
   }
 }
