--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pantry-partner",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
+  "scheme": "pantry-partner",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,11 +14,17 @@
     "@tamagui/config": "^1.111.6",
     "@tamagui/metro-plugin": "^1.111.6",
     "expo": "~51.0.28",
+    "expo-constants": "~16.0.2",
     "expo-font": "~12.0.10",
-    "expo-router": "^3.5.23",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-safe-area-context": "4.11.0",
+    "react-native-screens": "3.34.0",
+    "react-native-web": "~0.19.10",
     "tamagui": "^1.111.6"
   },
   "devDependencies": {
